# game-of-life-rust

./: Cargo.toml
maps/: map_generator.rs
maps/compiled/: "map_0"  "map_1"  map_3
maps/raw_maps/: map_0  map_1  map_3
src/: lib.rs
src/game_logic/: cell.rs  game.rs  mod.rs
src/render/: printer.rs
