[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Israel <israel.silvino@gmail.com>"]
edition = "2018"
exclude = ["bin/map_generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.3.9"
lazy_static = "1.4.0"
colour = "0.5.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }


